# rioc

./: Cargo.toml  README.md
derives/: Cargo.toml  README.md
derives/src/: lib.rs
derives/tests/: basic.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
iconfig/: Cargo.toml  config.toml
iconfig/config/: config.toml
iconfig/src/: lib.rs
imacro/: Cargo.toml  build.rs
imacro/src/: expand.rs  inject.rs  injectable.rs  lib.rs  parse.rs  provider.rs  verbatim.rs
imacro/src/core/: error.rs  hash.rs  mod.rs
imacro/src/core/encoding/: base32.rs  base64.rs  mod.rs
imacro/src/module/: mod.rs  models.rs  repository.rs
rioc/: Cargo.toml
rioc/src/: function.rs  layer.rs  lib.rs  task.rs
rioc/tests/: basic.rs  common.rs  module.rs  scope.rs  stateful.rs  stateless.rs
src/: lib.rs
src/containers/: basic.rs  mod.rs
src/interfaces/: container.rs  contrainer.rs  mod.rs
