[package]
name = "iconfig"
version = "0.1.2"
edition = "2021"

description = "mergable configuration file for rioc"
rust-version = "1.60"
license = "MIT"
repository = "https://github.com/open1s/rioc"

[dependencies]
toml = "0.8"
anyhow = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
rioc = { version = "0.1" }

[dev-dependencies]
tempfile = "3.8"