[package]
name = "imacro"
version = "0.4.6"
edition = "2021"
description = "Zero cost dependency injection macros"
rust-version = "1.60"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/open1s/rioc"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
rioc = { path = "../rioc" }