[package]
name = "rioc"
version = "0.2.9"
edition = "2021"
description = "Zero cost dependency injection macros"
rust-version = "1.60"
license = "MIT"
repository = "https://github.com/open1s/rioc"

[lib]

[features]

[dependencies]
imacro = { path = "../imacro" ,version = "0.4"}
ibag = { version = "0.3" }
irgo = { version = "0.2" }