[package]
name = "rioc"
version = "0.2.11"
edition = "2021"
description = "Zero cost dependency injection macros"
rust-version = "1.60"
license = "MIT"
repository = "https://github.com/open1s/rioc"

[lib]

[features]

[dependencies]
crossbeam = { version = "0.8" }
crossbeam-channel = { version = "0.5" }
generator = "0.8"
serde_json = { version = "1.0" }
may = { version = "0.3" }
imacro = { path = "../imacro" ,version = "0.4"}
ibag = { version = "0.3" }
irgo = { version = "0.2" }